# opensim-core

OpenSim/Examples/Plugins/BodyDragExample/: BodyDragForce.cpp
OpenSim/Examples/Plugins/VolumetricContactExample/: CMakeLists.txt  EllipsoidHalfSpaceVolumetricContactForce.cpp  EllipsoidHalfSpaceVolumetricContactForce.h  RegisterTypes_osimPlugin.cpp  VolumetricContactForce.cpp  VolumetricContactForce.h
OpenSim/Simulation/: RegisterTypes_osimSimulation.cpp
OpenSim/Simulation/Model/: EllipsoidHalfSpaceVolumetricContactForce.cpp  EllipsoidHalfSpaceVolumetricContactForce.h
OpenSim/Simulation/Test/: testForces.cpp
OpenSim/Tests/: CMakeLists.txt
OpenSim/Tests/VolumetricContactExample/: CMakeLists.txt
